# internal/application/property/dto/dto.go
@@ -2,6 +2,7 @@ package dto
 
 import (
 	property "github.com/Oleja123/estate-agency/internal/domain/property"
+	optional "github.com/denpa16/optional-go-type"
 )
 
 type CreatePropertyRequest struct {
@@ -13,20 +14,19 @@ type CreatePropertyRequest struct {
 	Area                float64 `json:"area"`
 	PropertyAddress     string  `json:"property_address"`
 	City                string  `json:"city"`
-	CreatedBy           int     `json:"created_by"`
 }
 
 type UpdatePropertyRequest struct {
-	ID                  int      `json:"-"`
-	Title               *string  `json:"title,omitempty"`
-	PropertyDescription *string  `json:"property_description,omitempty"`
-	TypeID              *int     `json:"type_id,omitempty"`
-	TransactionType     *string  `json:"transaction_type,omitempty"`
-	Price               *float64 `json:"price,omitempty"`
-	Area                *float64 `json:"area,omitempty"`
-	PropertyAddress     *string  `json:"property_address,omitempty"`
-	City                *string  `json:"city,omitempty"`
-	PropertyStatus      *string  `json:"property_status,omitempty"`
+	ID                  int                      `json:"-"`
+	Title               optional.OptionalString  `json:"title,omitempty"`
+	PropertyDescription optional.OptionalString  `json:"property_description,omitempty"`
+	TypeID              optional.OptionalInt     `json:"type_id,omitempty"`
+	TransactionType     optional.OptionalString  `json:"transaction_type,omitempty"`
+	Price               optional.OptionalFloat64 `json:"price,omitempty"`
+	Area                optional.OptionalFloat64 `json:"area,omitempty"`
+	PropertyAddress     optional.OptionalString  `json:"property_address,omitempty"`
+	City                optional.OptionalString  `json:"city,omitempty"`
+	PropertyStatus      optional.OptionalString  `json:"property_status,omitempty"`
 }
 
 type ListPropertiesRequest struct {
@@ -36,6 +36,6 @@ type ListPropertiesRequest struct {
 }
 
 type ListPropertiesResponse struct {
-	Properties []property.Property `json:"properties"`
-	Total      int                 `json:"total"`
+	Properties []PropertyDTO `json:"properties"`
+	Total      int           `json:"total"`
 }
