# internal/handler/property/docs_dto.go
@@ -13,7 +13,6 @@ type PropertyCreateDoc struct {
 	Area                float64 `json:"area"`
 	PropertyAddress     string  `json:"property_address"`
 	City                string  `json:"city"`
-	CreatedBy           int     `json:"created_by"`
 }
 
 type PropertyDTODoc struct {
@@ -29,7 +28,6 @@ type PropertyDTODoc struct {
 	Longitude           float64   `json:"longitude"`
 	City                string    `json:"city"`
 	PropertyStatus      string    `json:"property_status"`
-	CreatedBy           int       `json:"created_by"`
 	CreatedAt           time.Time `json:"created_at"`
 	UpdatedAt           time.Time `json:"updated_at"`
 }
